[gd_scene load_steps=13 format=4 uid="uid://bq2wcg2wgsdl2"]

[ext_resource type="Script" uid="uid://dp3p0ha3uqfsr" path="res://scenes/Maps/ending_map.gd" id="1_356lk"]
[ext_resource type="Texture2D" uid="uid://d35uw0kgmhbw" path="res://assets/handmade/plaza.png" id="1_sq0ms"]
[ext_resource type="Texture2D" uid="uid://col7y354dtvnk" path="res://assets/handmade/tileset dom.png" id="1_t520p"]
[ext_resource type="PackedScene" uid="uid://dkhabu48y37ca" path="res://scenes/props/MusicScene.tscn" id="2_8s8cl"]
[ext_resource type="PackedScene" uid="uid://dba6tbl6tl0go" path="res://scenes/player.tscn" id="2_f7u1t"]
[ext_resource type="PackedScene" uid="uid://bvmqjptcybqc0" path="res://scenes/props/player_body_camera.tscn" id="3_tke1t"]
[ext_resource type="PackedScene" uid="uid://mn411bco744v" path="res://scenes/NPCs/Ania.tscn" id="5_5w1bm"]
[ext_resource type="PackedScene" uid="uid://cli2rs3k6r1k8" path="res://scenes/NPCs/Robert.tscn" id="6_vgq8o"]
[ext_resource type="PackedScene" uid="uid://cmxvf8myyfhsa" path="res://scenes/UI/actionable.tscn" id="7_5w1bm"]
[ext_resource type="Resource" uid="uid://i14fhfqel8fp" path="res://dialogue/Player.dialogue" id="8_vgq8o"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sq0ms"]
texture = ExtResource("1_t520p")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
0:6/0 = 0
1:6/0 = 0
0:7/0 = 0
1:7/0 = 0
0:8/0 = 0
1:8/0 = 0
0:9/0 = 0
1:9/0 = 0
0:10/0 = 0
1:10/0 = 0
7:1/0 = 0
7:2/0 = 0
8:2/0 = 0
8:3/0 = 0
8:4/0 = 0
8:5/0 = 0
7:5/0 = 0
7:4/0 = 0
7:3/0 = 0
8:1/0 = 0
6:4/0 = 0
5:4/0 = 0
4:4/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
1:11/0 = 0
1:12/0 = 0
1:13/0 = 0
1:16/0 = 0
0:16/0 = 0
0:13/0 = 0
0:12/0 = 0
0:11/0 = 0
2:12/0 = 0
2:13/0 = 0
2:14/0 = 0
2:15/0 = 0
2:16/0 = 0
2:17/0 = 0
7:0/0 = 0
8:0/0 = 0
1:3/0 = 0
1:2/0 = 0
1:1/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
6:6/0 = 0
6:7/0 = 0
5:6/0 = 0
4:6/0 = 0
4:7/0 = 0
3:8/0 = 0
3:7/0 = 0
3:6/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
15:6/0 = 0
14:6/0 = 0
14:5/0 = 0
14:4/0 = 0
14:3/0 = 0
14:2/0 = 0
13:5/0 = 0
13:4/0 = 0
13:3/0 = 0
12:5/0 = 0
12:4/0 = 0
12:3/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
19:8/0 = 0
18:8/0 = 0
17:8/0 = 0
16:8/0 = 0
15:8/0 = 0
14:8/0 = 0
13:8/0 = 0
12:8/0 = 0
18:6/0 = 0
19:6/0 = 0
17:6/0 = 0
11:4/0 = 0
11:3/0 = 0
11:2/0 = 0
10:2/0 = 0
10:3/0 = 0
10:4/0 = 0
10:1/0 = 0
10:0/0 = 0
11:0/0 = 0
11:1/0 = 0
12:0/0 = 0
12:1/0 = 0
12:2/0 = 0
13:2/0 = 0
13:1/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
14:1/0 = 0
19:1/0 = 0
19:2/0 = 0
19:3/0 = 0
19:4/0 = 0
19:5/0 = 0
5:7/0 = 0
0:14/0 = 0
0:15/0 = 0
1:14/0 = 0
1:15/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
11:7/0 = 0
10:7/0 = 0
9:7/0 = 0
4:8/0 = 0
4:9/0 = 0
4:10/0 = 0
4:11/0 = 0
4:12/0 = 0
3:12/0 = 0
3:11/0 = 0
3:10/0 = 0
3:9/0 = 0
7:7/0 = 0
7:6/0 = 0
8:6/0 = 0
8:7/0 = 0
8:8/0 = 0
7:8/0 = 0

[sub_resource type="TileSet" id="TileSet_5w1bm"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_sq0ms")

[node name="EndingMap" type="Node2D"]
script = ExtResource("1_356lk")

[node name="MusicScene" parent="." instance=ExtResource("2_8s8cl")]
ambience = 4
amb_volume = 0.18

[node name="PhysicsLayer" type="TileMapLayer" parent="."]
position = Vector2(0, 2)
tile_map_data = PackedByteArray("AAAAAP//AQAEAAAAAAABAP//AQAEAAAAAAACAP//AQAEAAAAAAADAP//AQAEAAAAAAAFAP//AQAEAAAAAAAGAP//AQAEAAAAAAAHAP//AQAEAAAAAAAIAP//AQAEAAAAAAAJAP//AQAEAAAAAAAKAP//AQAEAAAAAAALAP//AQAEAAAAAAALAP7/AQAEAAAAAAALAP3/AQAEAAAAAAALAPz/AQAEAAAAAAALAPv/AQAEAAAAAAALAPr/AQAEAAAAAAALAPn/AQAEAAAAAAAKAPn/AQAEAAAAAAAJAPn/AQAEAAAAAAAIAPn/AQAEAAAAAAAGAPn/AQAEAAAAAAAHAPn/AQAEAAAAAAAFAPn/AQAEAAAAAAADAPn/AQAEAAAAAAABAPn/AQAEAAAAAAACAPn/AQAEAAAAAAAAAPn/AQAEAAAAAAAKAPr/AQAEAAAAAAAKAPv/AQAEAAAAAAAKAPz/AQAEAAAAAAAKAP3/AQAEAAAAAAAKAP7/AQAEAAAAAAD/////AQAEAAAAAAD+////AQAEAAAAAAD9////AQAEAAAAAAD8////AQAEAAAAAAD7////AQAEAAAAAAD6////AQAEAAAAAAD5////AQAEAAAAAAD4////AQAEAAAAAAD3////AQAEAAAAAAD2////AQAEAAAAAAD1////AQAEAAAAAAD1//7/AQAEAAAAAAD1//z/AQAEAAAAAAD1//3/AQAEAAAAAAD1//v/AQAEAAAAAAD1//r/AQAEAAAAAAD1//n/AQAEAAAAAAD2//n/AQAEAAAAAAD3//n/AQAEAAAAAAD4//n/AQAEAAAAAAD5//n/AQAEAAAAAAD6//n/AQAEAAAAAAD7//n/AQAEAAAAAAD8//n/AQAEAAAAAAD9//n/AQAEAAAAAAD+//n/AQAEAAAAAAD///n/AQAEAAAAAAD0//n/AQAEAAAAAAD0//r/AQAEAAAAAAD0//v/AQAEAAAAAAD0//z/AQAEAAAAAAD0//3/AQAEAAAAAAD0//7/AQAEAAAAAAD0////AQAEAAAAAAAEAPn/AQAEAAAAAAAEAPr/AQAEAAAAAAAEAPv/AQAEAAAAAAAEAPz/AQAEAAAAAAAEAP3/AQAEAAAAAAAEAP7/AQAEAAAAAAAEAP//AQAEAAAAAAA=")
tile_set = SubResource("TileSet_5w1bm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-31, -87)
texture = ExtResource("1_sq0ms")

[node name="PlayerBodyCamera" parent="." instance=ExtResource("3_tke1t")]
position = Vector2(-21, -86.99999)
scale = Vector2(1.1, 1.1)

[node name="Player" parent="." instance=ExtResource("2_f7u1t")]
position = Vector2(-142, -15)
is_jumping_allowed = false

[node name="EndingA" parent="." instance=ExtResource("7_5w1bm")]
position = Vector2(-81, -29)
dialogue_resource = ExtResource("8_vgq8o")
dialogue_start = "ending_A"
automatic_interaction = true
can_be_completed = true

[node name="withFriends" type="Node2D" parent="."]
position = Vector2(0, 2)

[node name="Ania" parent="withFriends" instance=ExtResource("5_5w1bm")]
position = Vector2(-13, -77)

[node name="Robert" parent="withFriends" instance=ExtResource("6_vgq8o")]
position = Vector2(-60, -61)

[node name="EndingB" parent="withFriends" instance=ExtResource("7_5w1bm")]
position = Vector2(-34, -31)
dialogue_resource = ExtResource("8_vgq8o")
dialogue_start = "ending_B"
automatic_interaction = true
can_be_completed = true
